Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8122

Fix dereferencing potential NULL pointers in ConDrvReadConsole() and ConDrvChangeScreenBufferAttributes()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.3.17
    • Win32SS

    Description

      We are assigning nInitialChars without checking if ReadControl is NULL in ConDrvReadConsole()
      also we are assigning NumCodesToWrite and OldScreenAttrib without checking if Buffer is NULL in ConDrvChangeScreenBufferAttributes()

      Attachments

        Activity

          People

            hbelusca hbelusca
            vicmarcal vicmarcal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: