[CONSRV] - Fix dereferencing potential NULL pointers in ConDrvReadConsole() and ConDrvChangeScreenBufferAttributes(); - Fix a wcsncat in ConSrvOpenUserSettings() Patches by Victor Martinez Calvo CORE-8122 CORE-8123 #resolve #comment Fixed in revision 63035, cheers ;)

svn path=/trunk/; revision=63035